# curiopilot

./: .env.example  .gitignore  CLAUDE.md  IDEAS.md  README.md  config.yaml  pyproject.toml
docs/: PRD.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useArticle.ts  useArticles.ts  useBookmarks.ts  useBriefings.ts  useCompare.ts  useConfig.ts  useDLQ.ts  useFeedback.ts  useKeyboardNav.ts  useMediaQuery.ts  useObsidian.ts  usePipelineRun.ts  useSearch.ts  useStats.ts  useTheme.ts
frontend/src/lib/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
scripts/: create_shortcut.ps1  generate_icons.py  launch.bat  launch.vbs
src/curiopilot/: __init__.py  cli.py  config.py  desktop.py  display.py  email_digest.py  feedback.py  logging_config.py  migrate.py  models.py
src/curiopilot/agents/: briefing_agent.py  filter_agent.py  novelty_engine.py  query_agent.py  reader_agent.py
src/curiopilot/api/: __init__.py  app.py  deps.py  schemas.py
src/curiopilot/export/: obsidian.py
src/curiopilot/llm/: circuit_breaker.py  ollama.py
src/curiopilot/pipeline/: checkpoint.py  graph.py  run.py
src/curiopilot/utils/: text.py  (+1 more)
tests/: test_api_briefings.py  test_api_pipeline.py  test_api_sources.py  test_article_store.py  test_briefing_agent.py  test_config.py  test_email_digest.py  test_feedback.py  test_knowledge_graph.py  test_migrate.py  test_novelty_engine.py  test_pipeline_graph.py  test_reader_backfill.py  test_scrapers.py  test_url_store.py  test_vector_store.py
(+56 files in other folders)
